refactor: Moving util methods